# synesthesia

./: CMakeLists.txt  README.md  config.h.in
assets/: CMakeLists.txt
latex/: notes.aux  notes.fdb_latexmk  notes.fls  notes.tex
src/: CMakeLists.txt  main.cpp  shared_state.h
src/audio/: CMakeLists.txt  audio.cpp  audio.h  decoder.cpp  decoder.h  fourier.cpp  fourier.h  helpers.h  player.h  spatial.h
src/visual/: CMakeLists.txt  circle.h  draw.cpp  draw.h  init.h  loader.h  main_.cpp  shared_state.h  visual.cpp  visual.h
src/visual/shaders/: circle.frag  circle.vert
